# danubit

./: .gitignore
backend/: .env  Cargo.toml
backend/danubit/: .env  Cargo.toml
backend/danubit/migrations/2023-10-21-153830_create_asos/: up.sql
backend/danubit/migrations/2023-10-21-164230_create_users/: up.sql
backend/danubit/migrations/2023-10-23-172921_create_members/: up.sql
backend/danubit/migrations/2023-10-24-125431_create_activities/: down.sql  up.sql
backend/danubit/migrations/2023-10-24-160913_create_managers/: up.sql
backend/danubit/migrations/2023-10-24-160942_create_media/: up.sql
backend/danubit/migrations/2023-10-24-160943_create_materials/: up.sql
backend/danubit/src/: api.rs  main.rs  models.rs  repo.rs  schema.rs  show_asoc.rs
backend/data/default_models/: a2.json  asociation.json
backend/database/: docker-compose.yaml
backend/docker/: docker-compose.yaml
backend/examples/: testclient.py
backend/examples/models/: asociation.json  default_manager.json  user_cero.json
backend/migrations/0000_diesel_initial_setup/: up.sql
backend/migrations/0001_create_asos/: down.sql  up.sql
backend/migrations/0002_create_users/: up.sql
backend/migrations/0003_create_members/: down.sql  up.sql
backend/migrations/0004_create_activities/: up.sql
backend/migrations/0005_create_managers/: down.sql
backend/migrations/0006_create_documents/: down.sql  up.sql
backend/migrations/0007_create_media/: down.sql  up.sql
backend/migrations/0008_create_materials/: down.sql
backend/migrations/0009_create_lending/: down.sql  up.sql
backend/migrations/0010_create_registration/: down.sql  up.sql
backend/src/: api.rs  auth.rs  main.rs  models.rs  schema.rs  settings.rs
backend/src/models/: api.rs  database.rs
docs/: config.json  justfile  style.css
docs/src/: analisis_prototipo.md  api.md  api_mock.md  er.mmd  er3.mmd  funcionalidades.md  functionalities.md  objectivos_prototipo.md  propuesta.md  (+4 more)
frontend/: next.config.mjs  package-lock.json  package.json  tsconfig.json
old-frontend/: .gitignore
(+35 files in other folders)
