[package]
name = "danubit"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "^0.3", features = ["serde-human-readable"] }
uuid = { version = "^1.5", features = ["serde"] }
dotenvy = "^0.15"
tracing = "^0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
diesel = { version = "2.1.0", features = ["postgres", "serde_json", "uuid", "time", "r2d2"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
poem = "1.3"
poem-openapi = { version = "3.0", features = ["swagger-ui", "uuid", "time"] }
